# TinyMC

./: .gitignore  CMakeLists.txt
assets/models/block/: air.json  cobblestone.json  dirt.json  grass.json  stone.json
assets/shaders/: basic.frag  basic.vert  chunk.vert  ui.frag  ui.vert
source/: constant.h  main.cpp  util.h
source/application/: application.cpp  application.h  context.cpp  context.h
source/entity/: camera.cpp  camera.h  entity.cpp  entity.h  player.cpp  player.h
source/math/: glm.h  matrix.cpp  matrix.h  types.h  vectorxz.h
source/render/: mesh.cpp  mesh.h  model.cpp  model.h  renderinfo.h  rendermanager.cpp  rendermanager.h
source/render/model/: abstractmodel.cpp  abstractmodel.h  colormodel2d.cpp  colormodel2d.h  texturemodel3d.cpp  texturemodel3d.h
source/render/renderer/: chunkrenderer.cpp  chunkrenderer.h  cuberenderer.cpp  cuberenderer.h  quadrenderer.cpp  quadrenderer.h  uirenderer.cpp  uirenderer.h
source/shader/: abstractshader.cpp  abstractshader.h  basicshader.cpp  basicshader.h  chunkshader.cpp  chunkshader.h  shader.cpp  shader.h  shaderloader.cpp  shaderloader.h  uishader.cpp  uishader.h
source/texture/: basictexture.cpp  basictexture.h  textureatlas.cpp  textureatlas.h
source/ui/: inventorybar.cpp  inventorybar.h  ui.cpp  ui.h
source/world/: constant.h  world.cpp  world.h
source/world/block/: block.cpp  block.h  blockdata.cpp  blockdata.h  blockid.h  blockmanager.cpp  blockmanager.h  chunkblock.cpp  chunkblock.h
source/world/chunk/: abstractchunk.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  chunkmesh.h  (+1 more)
